# intently-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PRD.md  README.md
.claude/: AGENT_TEAMS.md  settings.json
.claude/agents/: dara-abramovic.md  head-tech.md  jun-tanaka.md  kael-okonkwo.md  maren-lindqvist.md  priya-chakrabarti.md  tomas-herrera.md
.claude/hooks/: README.md  architecture-first.py  crate-boundary-guard.py  intent-guard.py  protect-generated-files.py  protect-schemas.py  read-protection.py  task-completed.sh  teammate-idle.sh
.claude/rules/: design-principles.md  devops-ci-rules.md  frontend-conventions.md  implementation-playbook.md  quality-standards.md  rust-conventions.md  schema-rules.md  tauri-rules.md  theo-concepts.md  workflow-rules.md
.claude/teams/: TEAMS.md
.github/workflows/: ci.yml
docs/: LLM Orchestrator.md  Planner Engine — o cérebro que tr.md  Tauri.md  Wireframe.md  Wireframes por telas.md  compass_artifact_wf-4e18774a-d0f0-4e24-bd4c-89b7ddf4ab15_text_markdown.md  spec implementável.md  templates de tarefas LLM.md
docs/adrs/: 001-extractor-gaps-real-world-validation.md  002-source-anchoring.md  003-knowledge-graph.md
examples/: analyze_fixtures.rs  analyze_project.rs
src/: engine.rs  error.rs  lib.rs
src/git/: metadata.rs  mod.rs
src/model/: builder.rs  diff.rs  file_tree.rs  graph.rs  graph_analysis.rs  import_resolver.rs  mod.rs  module_inference.rs  patterns.rs  symbol_table.rs  types.rs
src/parser/: mod.rs
src/python_resolver/: mod.rs
src/search/: mod.rs  pattern_engine.rs
src/twin/: builder.rs  diff.rs  graph.rs  import_resolver.rs  mod.rs  module_inference.rs  types.rs
tests/: diverse_validation.rs  full_extraction.rs  real_world_validation.rs
tests/common/: mod.rs
(+143 files in other folders)
