[package]
name = "intently_core"
edition = "2021"
version = "0.1.0"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23.2"
ast-grep-core = "0.41"
petgraph = "0.8"
rayon = "1"
similar = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
